LPS-65792 Overrides expanded panels height to make sure they always have auto height. This overrides inline height styling added by the jquery collapse plugin

--- a/modules/apps/foundation/frontend-css/frontend-css-web/src/main/resources/META-INF/resources/portal/_add_content.scss
+++ b/modules/apps/foundation/frontend-css/frontend-css-web/src/main/resources/META-INF/resources/portal/_add_content.scss
@@ -9,6 +9,10 @@
 			cursor: move;
 		}
 
+		.lfr-content-category .list-group-panel.collapse.in {
+			height: auto !important;
+		}
+
 		.lfr-content-item {
 			.drag-content-item {
 				display: inline-block;
